# GPSE

./: .gitignore  .python-version  LICENSE  README.md  change.md  gpse.yaml  pyproject.toml  requirements.yaml  todo_v2.md
batch/: batch_config.example.yaml  batch_genomic_prediction.py  batch_genomic_prediction_test.py
docs/: 6species_input_sha256.txt  6species_reproduction_validation.md  6species_result_baseline.tsv  AGENTS.md  readme_cn.md  todo_v2.md  todo_v3.md  train_Architecture.md  train_pipeline.md  train_predict_audit_report.md
docs/26.7.18/: GPSE训练流程优化方案.md
docs/wiki/: 01-overview.md  02-cli-convert.md  03-cli-train.md  04-cli-predict.md  05-configuration.md  06-api-reference.md  README.md
gpse/: __init__.py  cli.py
gpse/batch/: __init__.py  cli.py  merge.py  runner.py
gpse/config/: __init__.py  _model_registry.py  _topsis_config.py  constants.py  default.yaml  models.yaml  software.yaml  topsis.yaml
gpse/convert/: __init__.py  cli.py  external.py  genotype_matrix.py  phenotype.py  processor.py  qc.py  validators.py  workflow.py
gpse/core/: __init__.py  _cv_manager.py  _data_io.py  _ensemble.py  _fold_training.py  _model_tools.py  _optimization.py  _pipeline.py  _repeat_training.py  _topsis_config.py  analyze_phenotypes.py  batch_genomic_prediction.py  ensemble_stacking.py  genomic_classification.py  genomic_data_pipeline.py  genomic_prediction_v2.py  genomic_utils.py  prediction_v2.py
gpse/models/: __init__.py  classification_model_optimizer.py  classification_models.py  model_optimizers.py  regression_model_optimizer.py  safe_kernel_ridge.py
gpse/predict/: __init__.py  cli.py  core.py
gpse/tasks/: __init__.py  classification.py
gpse/tools/: __init__.py  cli.py  split.py
gpse/train/: __init__.py  _cv_manager.py  _data_io.py  _ensemble.py  _feature_selection.py  _fold_training.py  _model_pipeline.py  _model_tools.py  _optimization.py  _pipeline.py  _repeat_training.py  _results.py  cli.py  predictor.py  stacking.py  topsis.py  workflow.py
gpse/utils/: __init__.py  cli_display.py  configuration.py  dependency_checker.py  feature_manifest.py  genomic_data_pipeline.py  genomic_utils.py  log_utils.py  logo.py  paralle.py  print_utils.py  snp_ids.py  version.py
scripts/: ensemble_stacking.py  genomic_prediction_v2.py  genomic_utils.py  qc.py  topsis_evaluator.py
tests/: test_batch_runner.py  test_called_process_error_logging.py  test_convert_readme_mode.py  test_model_registry_pickle.py  test_parallelism.py  test_safe_kernel_ridge.py  test_snp_id_alignment.py  test_train_pipeline_optimization.py
tests/validation/: 3_species_validation_cucumber_batch.sh  3_species_validation_melon_batch.sh  3_species_validation_watermelon_batch.sh  6_special_validation_maize_FT.sh  6_special_validation_maize_FT_feature_selection_univariate.sh  6_special_validation_maize_FT_feature_selection_univariate_noCV.sh  6_special_validation_maize_FT_noCV.sh  6_special_validation_maize_HT.sh  6_species_validation_maize_batch.sh  6_species_validation_rice_batch.sh  6_species_validation_sorghum_batch.sh  6_species_validation_soy_batch.sh  6_species_validation_spruce_batch.sh  6_species_validation_switchgrass_batch.sh  README.md  cucumber_batch_config.yaml  magic_3d_batch_config.yaml  magic_gwas_batch_config.yaml  magic_validation_3d_batch.sh  magic_validation_gwas_batch.sh  maize_batch_config.yaml  melon_batch_config.yaml  rice_batch_config.yaml  sorghum_batch_config.yaml  soy_batch_config.yaml  spruce_batch_config.yaml  switchgrass_batch_config.yaml  watermelon_batch_config.yaml
