[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gpse"
version = "0.0.1"
description = "Genomic Prediction with Stacking Ensemble for horticultural crops"
readme = "README.md"
license = "MIT"
authors = [
    "XIAOLIU <1468835852@qq.com>",
    "JZHANG <zhangjian199567@outlook.com>",
]
keywords = [
    "genomic selection",
    "machine learning",
    "stacking",
    "ensemble learning",
    "horticulture",
    "breeding",
    "GWAS",
    "SNP",
    "genomic prediction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/xsx123123/GPSE"
repository = "https://github.com/xsx123123/GPSE"
packages = [{include = "gpse"}]
include = [
    "gpse/config/*.yaml",
    "gpse/report/templates/*.j2",
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.3"
numpy = "^2.2.6"
scipy = "^1.15.3"
scikit-learn = "^1.7.2"
xgboost = "^3.2.0"
lightgbm = "^4.6.0"
catboost = "^1.2.10"
optuna = "^4.9.0"
joblib = "^1.5.3"
ngboost = "^0.5.10"
rich = "^15.0.0"
rich-argparse = "^1.7.0"
tomli = "^2.4.1"
PyYAML = "^6.0.3"
rich-gradient = "^0.3.12"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
flake8 = "^7.0"
mypy = "^1.0"

[tool.poetry.scripts]
gpse = "gpse.cli:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]